# blink

./: .eslintrc.cjs  .gitignore  CLAUDE.md  DEBUGGING.md  DEBUG_WINDOW_CREATION.md  README.md  check-logs.sh  cleanup-duplicate-notes.js  debug-shortcuts.sh  index.html  manual-test-steps.md  package.json  pnpm-lock.yaml  tailwind.config.js  test-events.html  test-lifecycle.md  test-note-selection.html  test-state-truth.sh  test-window-lifecycle.js  tsconfig.json  vite.config.ts
src-tauri/: BLINK] [2025-07-07 23:40:42.352] [DEBUG] [SHORTCUT-HANDLER] Checking which shortcut was pressed...  Cargo.toml  entitlements.plist  tauri.conf.json  tauri.conf.template.json
src-tauri/capabilities/: global-shortcut.json
src-tauri/data/: config.json  notes.json
src-tauri/icons/: icon.icns
src-tauri/icons_backup/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/handlers/: menu_handler.rs  mod.rs  shortcut_handler.rs  window_handler.rs
src-tauri/src/modules/: commands.rs  database.rs  dirty_tracker.rs  file_notes_storage.rs  file_operations.rs  file_storage.rs  logging.rs  mod.rs  modified_state_tracker.rs  note_commands.rs  storage.rs  system_commands.rs  test_commands.rs  window_commands.rs  windows.rs
src-tauri/src/services/: mod.rs  note_service.rs  window_service.rs
src-tauri/src/startup/: app_setup.rs  data_loader.rs  mod.rs
src-tauri/src/tests/: mod.rs  position_bug_tests.rs  simplified_position_test.rs  slug_test.rs
src-tauri/src/types/: config.rs  mod.rs  note.rs  window.rs  workspace.rs
src-tauri/src/utils/: mod.rs  slug.rs  (+1 more)
(+190 files in other folders)
