[package]
name = "blink"
version = "0.1.0"
description = "A modern note-taking application built with Tauri"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "blink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
notify = "6.0"
regex = "1.0"
log = "0.4"
env_logger = "0.10"
sha2 = "0.10"
tauri-plugin-clipboard-manager = "2.3.0"
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json"] }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"
futures = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
